# agent-ops

./: .env.dev  .env.example  .env.local  .env.prod  .gitignore  Dockerfile  README.md  deploy-eks.ps1  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  start-local.ps1
.github/: copilot-instructions.md
agent-definition/: sample-full-payload.json  senior-software-architect.agent-full.yaml  senior-software-architect.agent.yaml
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: __init__.py  agents.py
app/core/: __init__.py  config.py  exceptions.py  logging.py
app/middleware/: error_handler.py  request_logging.py
app/models/: __init__.py  agent.py  common.py
app/repositories/: __init__.py  agent_definition_repository.py  bedrock_repository.py
app/schemas/: __init__.py  agent_definition.py
app/services/: __init__.py  bedrock_agent_service.py  protocols.py
docs/: agent-definition-schema.md  api.md  architecture.md
k8s/: deployment.yaml  service.yaml
policy/bedrock/: bedrock-policy.json  trust-policy.json
tests/: conftest.py
tests/e2e/: test_agent_lifecycle.py
tests/integration/: test_agents_api.py
tests/unit/: test_agent_definition_repository.py  test_bedrock_agent_service.py  test_bedrock_repository.py  test_config.py
